<resources>
    <string name="app_name">TPAY</string>
    <string name="main_menu">Main Menu</string>
    <string name="my_wallet">My Wallet</string>
    <string name="add_money">Add Money</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="my_account">My Account</string>
    <string name="transactions">Transactions</string>
    <string name="mtn_momo">Mtn Mobile Money</string>
    <string name="airtel_tigo_money">AirtelTigo Money</string>
    <string name="vodafone_cash">Vodafone Cash</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="phone">Phone Number</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="final_year_project">Final Year Project, CS 2020</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="surname">Surname</string>
    <string name="other_names">Other Names</string>
    <string name="have_account">Already have an account?</string>
    <string name="user">Normal User</string>
    <string name="driver">Driver</string>
    <string name="sign_up_as">Sign Up As</string>
    <string name="save">Save</string>
    <string name="input_vehicle_details">Input Vehicle Details</string>
    <string name="vehicle_model">Vehicle Model</string>
    <string name="vehicle_number">Vehicle Number</string>
    <string name="accept_payment">Accept Payment</string>
    <string name="withdraw">Withdraw</string>
    <string name="no_transactions">No Transactions Found</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="change_password">Change Password</string>
    <string name="amount">Amount (GHS)</string>
    <string name="enter_amount">enter amount here</string>
    <string name="enter_number">enter phone number here</string>
    <string name="debit">Debit</string>
    <string name="scan_card">Scan Card</string>
    <string name="credit_wallet">Credit Wallet</string>
    <string name="account_details">Account Details</string>
    <string name="personal_details">Personal Details</string>
    <string name="vehicle_details">Vehicle Details</string>
    <string name="update">Update</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="voucher">Vodafone Voucher</string>
    <string name="tigo_instruct">
        1. Dial *5015# to approve your transaction.\n
        2. Select the transaction to approve and click on send.\n
        3. Select YES to confirm your payment.
    </string>
    <string name="mtn_instruct">
        1. Dial *170#.\n
        2. Choose option: 6) Wallet.\n
        3. Choose option: 3) My Approvals.\n
        4. Enter your MOMO pin to retrieve your pending approval list.\n
        5. Choose a pending transaction.\n
        6. Choose option 1 to approve.\n
        7. Tap button to continue
    </string>
    <string name="expenses">Expenses</string>
    <string name="no_expenses">No Expenses Made</string>
    <string name="filter">Filter</string>

    <string name="notifications">Notifications</string>
    <string name="receive_notifications">Receive notifications</string>
    <string name="feedback">Feedback</string>
    <string name="send_feedback">Send us your feedback</string>
    <string name="version">Version</string>
    <string name="version_number">1.0</string>
    <string name="contact_developer_uri">mailto:alexfreeman221@gmail.com</string>
</resources>
