<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_margin="20dp"
    android:layout_height="match_parent">


    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"
            android:textSize="25sp"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:layout_marginBottom="10dp"
            tools:ignore="MissingPrefix"
            fontPath="fonts/Lobster-Regular.ttf"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:text="@string/login_to_continue"
            tools:ignore="MissingPrefix"
            fontPath="fonts/Lobster-Regular.ttf"
            android:layout_marginBottom="50dp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textSize="15sp"
            android:textColor="@color/colorPrimary"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/phone"
            android:inputType="phone"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="15sp"
            android:textColor="@color/colorPrimary"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:inputType="textPassword"
            android:layout_marginBottom="40dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textSize="15sp"
            android:visibility="gone"
            android:text="@string/forgot_password"
            android:textColor="@color/colorPrimary"
            android:layout_marginBottom="40dp"/>


        <Button
            android:layout_width="match_parent"
            android:text="@string/login"
            android:textAllCaps="false"
            android:background="@drawable/rounded_button"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:id="@+id/login"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_account"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:id="@+id/sign_up"
                android:textSize="15sp"
                android:textColor="@color/colorPrimary"
                android:layout_marginStart="10dp"/>

        </LinearLayout>

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:text="@string/final_year_project"/>



</RelativeLayout>