<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_margin="20dp"
    android:layout_height="match_parent">


    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"
            android:textSize="25sp"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:layout_marginBottom="10dp"
            tools:ignore="MissingPrefix"
            android:id="@+id/header"
            fontPath="fonts/Lobster-Regular.ttf"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:text="@string/input_vehicle_details"
            tools:ignore="MissingPrefix"
            fontPath="fonts/Lobster-Regular.ttf"
            android:layout_marginBottom="50dp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vehicle_model"
            android:textSize="15sp"
            android:textColor="@color/colorPrimary"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/model"
            android:inputType="text"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vehicle_number"
            android:textSize="15sp"
            android:textColor="@color/colorPrimary"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/vehicle_num"
            android:inputType="text"
            android:layout_marginBottom="40dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textSize="15sp"
            android:visibility="gone"
            android:text="@string/forgot_password"
            android:textColor="@color/colorPrimary"
            android:layout_marginBottom="40dp"/>


        <Button
            android:layout_width="match_parent"
            android:text="@string/save"
            android:textAllCaps="false"
            android:background="@drawable/rounded_button"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:id="@+id/save"
            android:layout_height="wrap_content"/>



    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:text="@string/final_year_project"/>



</RelativeLayout>