<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_margin="20dp"
    android:gravity="center"
    android:layout_height="match_parent">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="25sp"
        android:gravity="center"
        android:textColor="@color/colorPrimary"
        android:layout_marginBottom="40dp"
        tools:ignore="MissingPrefix"
        fontPath="fonts/Lobster-Regular.ttf"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/surname"
        android:textSize="15sp"
        android:textColor="@color/colorPrimary"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/surname"
        android:inputType="text"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/other_names"
        android:textSize="15sp"
        android:textColor="@color/colorPrimary"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/other_names"
        android:inputType="text"
        android:layout_marginBottom="20dp"/>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:textSize="15sp"
        android:textColor="@color/colorPrimary"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/phone"
        android:inputType="phone"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="15sp"
        android:textColor="@color/colorPrimary"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:inputType="textPassword"
        android:layout_marginBottom="20dp"/>


    <Button
        android:layout_width="match_parent"
        android:text="@string/login"
        android:textAllCaps="false"
        android:background="@drawable/rounded_button"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/have_account"/>

        <TextView
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/colorPrimary"
            android:layout_marginStart="10dp"/>

    </LinearLayout>



</LinearLayout>