<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/toolbar"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/current_password"
            android:textSize="15sp"
            android:textColor="@color/colorPrimary"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/current_password"
            android:inputType="textPassword"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_password"
            android:textSize="15sp"
            android:textColor="@color/colorPrimary"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:inputType="textPassword"
            android:layout_marginBottom="40dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/retype_password"
            android:textSize="15sp"
            android:textColor="@color/colorPrimary"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password_confirm"
            android:inputType="textPassword"
            android:layout_marginBottom="40dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textSize="15sp"
            android:visibility="gone"
            android:text="@string/forgot_password"
            android:textColor="@color/colorPrimary"
            android:layout_marginBottom="40dp"/>


        <Button
            android:layout_width="match_parent"
            android:text="@string/change_password"
            android:textAllCaps="false"
            android:background="@drawable/rounded_button"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:id="@+id/change_password"
            android:layout_height="wrap_content"/>



    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>