<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/toolbar"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>

    </com.google.android.material.appbar.AppBarLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">


        <LinearLayout
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/personal_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="1dp"
                android:layout_margin="5dp"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:padding="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:gravity="center"
                        android:textColor="@color/colorPrimary"
                        android:textSize="17sp"
                        android:text="@string/personal_details"/>


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/surname"
                        android:textSize="15sp"
                        android:textColor="@color/colorPrimary"
                        android:layout_marginBottom="10dp"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/surname"
                        android:inputType="text"
                        android:layout_marginBottom="20dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/other_names"
                        android:textSize="15sp"
                        android:textColor="@color/colorPrimary"
                        android:layout_marginBottom="10dp"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/other_names"
                        android:inputType="text"
                        android:layout_marginBottom="20dp"/>



                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/phone"
                        android:textSize="15sp"
                        android:textColor="@color/colorPrimary"
                        android:layout_marginBottom="10dp"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/phone"
                        android:inputType="phone"
                        android:layout_marginBottom="10dp"/>


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:visibility="gone"
                android:id="@+id/car_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="1dp"
                android:layout_margin="5dp"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:padding="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:gravity="center"
                        android:textColor="@color/colorPrimary"
                        android:textSize="17sp"
                        android:text="@string/vehicle_details"/>


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/vehicle_model"
                        android:textSize="15sp"
                        android:textColor="@color/colorPrimary"
                        android:layout_marginBottom="10dp"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/model"
                        android:inputType="text"
                        android:layout_marginBottom="20dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/vehicle_number"
                        android:textSize="15sp"
                        android:textColor="@color/colorPrimary"
                        android:layout_marginBottom="10dp"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/vehicle_num"
                        android:inputType="text"
                        android:layout_marginBottom="10dp"/>


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <Button
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="match_parent"
                android:text="@string/update"
                android:textAllCaps="false"
                android:background="@drawable/rounded_button"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:id="@+id/update"
                android:layout_marginBottom="50dp"
                android:layout_height="wrap_content"/>

        </LinearLayout>


    </ScrollView>



</androidx.coordinatorlayout.widget.CoordinatorLayout>